--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 </queries>
 
     <application
-        android:label="infoev"
+        android:label="InfoEV"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
