--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   google_sign_in: ^6.1.4
   google_maps_flutter: ^2.12.1 
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
+  flutter_local_notifications: ^19.2.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
