--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_local_notifications: ^19.2.1
   path_provider: ^2.1.1
   carousel_slider: ^5.0.0
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
