--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   path_provider: ^2.1.1
   carousel_slider: ^5.0.0
   flutter_screenutil: ^5.9.0
+  flutter_secure_storage: ^9.2.4
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
