--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.2.4
+  cloud_firestore: ^5.6.9
   uuid: ^4.5.1
 
 dev_dependencies:
