--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+ 
 <uses-permission android:name="android.permission.INTERNET"/>
 <uses-permission android:name="android.permission.VIBRATE" />
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
@@ -25,10 +22,12 @@
     <application
         android:label="InfoEV"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon"
+        android:allowBackup="true"
+        android:usesCleartextTraffic="false">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyDkNQWB0Em_-Elff-K1Ru50emhOYBnmEYE"/>
+           android:value="AIzaSyB0HMVL-LOXbprhK3NZJESBDL_37vV7sVU"/>
 
         <activity
             android:name=".MainActivity"
