--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   cloud_firestore: ^5.6.9
   uuid: ^4.5.1
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
